tests/ui/coherence/orphan-check-opaque-types-xxx-xxx-000.current.stderr
error[E0210]: opaque type `Opaque0` must be used as the argument to some local type (e.g., `MyStruct<Opaque0>`)
  --> $DIR/orphan-check-opaque-types-xxx-xxx-000.rs:12:34
   |
LL | impl foreign::Trait1<(), ()> for Opaque0 {}
   |                                  ^^^^^^^ uncovered opaque type
   |
   = note: implementing a foreign trait is only possible if at least one of the types for which it is implemented is local
   = note: only traits defined in the current crate can be implemented for type parameters and opaque types

error[E0210]: opaque type `Opaque0` must be covered by another type when it appears before the first local type (`Local`)
  --> $DIR/orphan-check-opaque-types-xxx-xxx-000.rs:18:37
   |
LL | impl foreign::Trait1<Local, ()> for Opaque0 {}
   |                                     ^^^^^^^ uncovered opaque type
   |
   = note: implementing a foreign trait is only possible if at least one of the types for which it is implemented is local,
           and no uncovered type parameters or opaque types appear before that first local type
   = note: in this case, 'before' refers to the following order: `impl<...> ForeignTrait<T1, ..., Tn> for T0`, where `T0` is the first and `Tn` is the last

error[E0210]: opaque type `Opaque0` must be covered by another type when it appears before the first local type (`Local`)
  --> $DIR/orphan-check-opaque-types-xxx-xxx-000.rs:24:37
   |
LL | impl foreign::Trait1<(), Local> for Fundamental<Opaque0> {}
   |                                     ^^^^^^^^^^^^^^^^^^^^ uncovered opaque type
   |
   = note: implementing a foreign trait is only possible if at least one of the types for which it is implemented is local,
           and no uncovered type parameters or opaque types appear before that first local type
   = note: in this case, 'before' refers to the following order: `impl<...> ForeignTrait<T1, ..., Tn> for T0`, where `T0` is the first and `Tn` is the last

error[E0210]: opaque type `Opaque1::{opaque#0}` must be covered by another type when it appears before the first local type (`Local`)
  --> $DIR/orphan-check-opaque-types-xxx-xxx-000.rs:32:40
   |
LL | impl foreign::Trait1<Local, Local> for Opaque1 {}
   |                                        ^^^^^^^ uncovered opaque type
   |
   = note: implementing a foreign trait is only possible if at least one of the types for which it is implemented is local,
           and no uncovered type parameters or opaque types appear before that first local type
   = note: in this case, 'before' refers to the following order: `impl<...> ForeignTrait<T1, ..., Tn> for T0`, where `T0` is the first and `Tn` is the last

error: aborting due to 4 previous errors

For more information about this error, try `rustc --explain E0210`.
